# powerpoint

./: LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
src/powerpoint/: __init__.py  chart_manager.py  presentation_manager.py  server.py  vision_manager.py
